y.output
State 111 conflicts: 2 shift/reduce
State 112 conflicts: 2 shift/reduce
State 122 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Type: INT
    2     | CHAR
    3     | FLOAT

    4 PrimaryExpression: CONSTANT
    5                  | ID
    6                  | FunctionCall
    7                  | '(' Expression ')'

    8 FunctionArgList: '&' ID
    9                | Expression
   10                | Expression ',' FunctionArgList

   11 FunctionCall: ID '(' FunctionArgList ')'
   12             | ID '(' ')'

   13 UnaryExpression: PrimaryExpression
   14                | '+' UnaryExpression
   15                | '-' UnaryExpression

   16 MultiplicativeExpression: UnaryExpression
   17                         | MultiplicativeExpression '*' UnaryExpression
   18                         | MultiplicativeExpression '/' UnaryExpression

   19 AdditiveExpression: MultiplicativeExpression
   20                   | AdditiveExpression '+' AdditiveExpression
   21                   | AdditiveExpression '-' AdditiveExpression

   22 ComparisonExpression: AdditiveExpression
   23                     | AdditiveExpression LT AdditiveExpression
   24                     | AdditiveExpression LE AdditiveExpression
   25                     | AdditiveExpression GT AdditiveExpression
   26                     | AdditiveExpression GE AdditiveExpression

   27 Expression: ComparisonExpression
   28           | ComparisonExpression EQ ComparisonExpression
   29           | ComparisonExpression NE ComparisonExpression

   30 AssignmentStatment: ID '=' Expression ';'

   31 IfStatement: IF '(' Expression ')' Statement
   32            | IF '(' Expression ')' Statement ELSE Statement

   33 WhileStatement: WHILE '(' Expression ')' Statement

   34 ReturnStatement: RETURN ';'
   35                | RETURN Expression ';'

   36 StatementList: %empty
   37              | Statement StatementList

   38 BlockStatement: '{' StatementList '}'

   39 EmptyStatement: ';'

   40 Statement: AssignmentStatment
   41          | IfStatement
   42          | WhileStatement
   43          | ReturnStatement
   44          | BlockStatement
   45          | EmptyStatement

   46 MainFunction: MAIN '(' VOID ')' '{' FunctionBody '}'

   47 ReturnType: VOID
   48           | Type

   49 FunctionParameter: Type ID

   50 FunctionParameterList: FunctionParameter
   51                      | FunctionParameter ',' FunctionParameterList

   52 VariableDefinition: Type ID '=' CONSTANT ';'

   53 VariableDefinitionList: %empty
   54                       | VariableDefinition VariableDefinitionList

   55 FunctionStatementList: ReturnStatement
   56                      | Statement FunctionStatementList

   57 FunctionBody: VariableDefinitionList FunctionStatementList

   58 FunctionDefinition: ReturnType ID '(' FunctionParameterList ')' '{' FunctionBody '}'
   59                   | ReturnType ID '(' VOID ')' '{' FunctionBody '}'

   60 FunctionDefinitionList: %empty
   61                       | FunctionDefinition FunctionDefinitionList

   62 Program: FunctionDefinitionList MainFunction FunctionDefinitionList


Terminals, with rules where they appear

$end (0) 0
'&' (38) 8
'(' (40) 7 11 12 31 32 33 46 58 59
')' (41) 7 11 12 31 32 33 46 58 59
'*' (42) 17
'+' (43) 14 20
',' (44) 10 51
'-' (45) 15 21
'/' (47) 18
';' (59) 30 34 35 39 52
'=' (61) 30 52
'{' (123) 38 46 58 59
'}' (125) 38 46 58 59
error (256)
INT (258) 1
FLOAT (259) 3
CHAR (260) 2
VOID (261) 46 47 59
RETURN (262) 34 35
MAIN (263) 46
WHILE (264) 33
IF (265) 31 32
ELSE (266) 32
CONSTANT (267) 4 52
ID (268) 5 8 11 12 30 49 52 58 59
LE (269) 24
GE (270) 26
EQ (271) 28
NE (272) 29
LT (273) 23
GT (274) 25


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Type (33)
    on left: 1 2 3, on right: 48 49 52
PrimaryExpression (34)
    on left: 4 5 6 7, on right: 13
FunctionArgList (35)
    on left: 8 9 10, on right: 10 11
FunctionCall (36)
    on left: 11 12, on right: 6
UnaryExpression (37)
    on left: 13 14 15, on right: 14 15 16 17 18
MultiplicativeExpression (38)
    on left: 16 17 18, on right: 17 18 19
AdditiveExpression (39)
    on left: 19 20 21, on right: 20 21 22 23 24 25 26
ComparisonExpression (40)
    on left: 22 23 24 25 26, on right: 27 28 29
Expression (41)
    on left: 27 28 29, on right: 7 9 10 30 31 32 33 35
AssignmentStatment (42)
    on left: 30, on right: 40
IfStatement (43)
    on left: 31 32, on right: 41
WhileStatement (44)
    on left: 33, on right: 42
ReturnStatement (45)
    on left: 34 35, on right: 43 55
StatementList (46)
    on left: 36 37, on right: 37 38
BlockStatement (47)
    on left: 38, on right: 44
EmptyStatement (48)
    on left: 39, on right: 45
Statement (49)
    on left: 40 41 42 43 44 45, on right: 31 32 33 37 56
MainFunction (50)
    on left: 46, on right: 62
ReturnType (51)
    on left: 47 48, on right: 58 59
FunctionParameter (52)
    on left: 49, on right: 50 51
FunctionParameterList (53)
    on left: 50 51, on right: 51 58
VariableDefinition (54)
    on left: 52, on right: 54
VariableDefinitionList (55)
    on left: 53 54, on right: 54 57
FunctionStatementList (56)
    on left: 55 56, on right: 56 57
FunctionBody (57)
    on left: 57, on right: 46 58 59
FunctionDefinition (58)
    on left: 58 59, on right: 61
FunctionDefinitionList (59)
    on left: 60 61, on right: 61 62
Program (60)
    on left: 62, on right: 0


State 0

    0 $accept: . Program $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    VOID   shift, and go to state 4

    $default  reduce using rule 60 (FunctionDefinitionList)

    Type                    go to state 5
    ReturnType              go to state 6
    FunctionDefinition      go to state 7
    FunctionDefinitionList  go to state 8
    Program                 go to state 9


State 1

    1 Type: INT .

    $default  reduce using rule 1 (Type)


State 2

    3 Type: FLOAT .

    $default  reduce using rule 3 (Type)


State 3

    2 Type: CHAR .

    $default  reduce using rule 2 (Type)


State 4

   47 ReturnType: VOID .

    $default  reduce using rule 47 (ReturnType)


State 5

   48 ReturnType: Type .

    $default  reduce using rule 48 (ReturnType)


State 6

   58 FunctionDefinition: ReturnType . ID '(' FunctionParameterList ')' '{' FunctionBody '}'
   59                   | ReturnType . ID '(' VOID ')' '{' FunctionBody '}'

    ID  shift, and go to state 10


State 7

   61 FunctionDefinitionList: FunctionDefinition . FunctionDefinitionList

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    VOID   shift, and go to state 4

    $default  reduce using rule 60 (FunctionDefinitionList)

    Type                    go to state 5
    ReturnType              go to state 6
    FunctionDefinition      go to state 7
    FunctionDefinitionList  go to state 11


State 8

   62 Program: FunctionDefinitionList . MainFunction FunctionDefinitionList

    MAIN  shift, and go to state 12

    MainFunction  go to state 13


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 10

   58 FunctionDefinition: ReturnType ID . '(' FunctionParameterList ')' '{' FunctionBody '}'
   59                   | ReturnType ID . '(' VOID ')' '{' FunctionBody '}'

    '('  shift, and go to state 15


State 11

   61 FunctionDefinitionList: FunctionDefinition FunctionDefinitionList .

    $default  reduce using rule 61 (FunctionDefinitionList)


State 12

   46 MainFunction: MAIN . '(' VOID ')' '{' FunctionBody '}'

    '('  shift, and go to state 16


State 13

   62 Program: FunctionDefinitionList MainFunction . FunctionDefinitionList

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    VOID   shift, and go to state 4

    $default  reduce using rule 60 (FunctionDefinitionList)

    Type                    go to state 5
    ReturnType              go to state 6
    FunctionDefinition      go to state 7
    FunctionDefinitionList  go to state 17


State 14

    0 $accept: Program $end .

    $default  accept


State 15

   58 FunctionDefinition: ReturnType ID '(' . FunctionParameterList ')' '{' FunctionBody '}'
   59                   | ReturnType ID '(' . VOID ')' '{' FunctionBody '}'

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    VOID   shift, and go to state 18

    Type                   go to state 19
    FunctionParameter      go to state 20
    FunctionParameterList  go to state 21


State 16

   46 MainFunction: MAIN '(' . VOID ')' '{' FunctionBody '}'

    VOID  shift, and go to state 22


State 17

   62 Program: FunctionDefinitionList MainFunction FunctionDefinitionList .

    $default  reduce using rule 62 (Program)


State 18

   59 FunctionDefinition: ReturnType ID '(' VOID . ')' '{' FunctionBody '}'

    ')'  shift, and go to state 23


State 19

   49 FunctionParameter: Type . ID

    ID  shift, and go to state 24


State 20

   50 FunctionParameterList: FunctionParameter .
   51                      | FunctionParameter . ',' FunctionParameterList

    ','  shift, and go to state 25

    $default  reduce using rule 50 (FunctionParameterList)


State 21

   58 FunctionDefinition: ReturnType ID '(' FunctionParameterList . ')' '{' FunctionBody '}'

    ')'  shift, and go to state 26


State 22

   46 MainFunction: MAIN '(' VOID . ')' '{' FunctionBody '}'

    ')'  shift, and go to state 27


State 23

   59 FunctionDefinition: ReturnType ID '(' VOID ')' . '{' FunctionBody '}'

    '{'  shift, and go to state 28


State 24

   49 FunctionParameter: Type ID .

    $default  reduce using rule 49 (FunctionParameter)


State 25

   51 FunctionParameterList: FunctionParameter ',' . FunctionParameterList

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3

    Type                   go to state 19
    FunctionParameter      go to state 20
    FunctionParameterList  go to state 29


State 26

   58 FunctionDefinition: ReturnType ID '(' FunctionParameterList ')' . '{' FunctionBody '}'

    '{'  shift, and go to state 30


State 27

   46 MainFunction: MAIN '(' VOID ')' . '{' FunctionBody '}'

    '{'  shift, and go to state 31


State 28

   59 FunctionDefinition: ReturnType ID '(' VOID ')' '{' . FunctionBody '}'

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3

    $default  reduce using rule 53 (VariableDefinitionList)

    Type                    go to state 32
    VariableDefinition      go to state 33
    VariableDefinitionList  go to state 34
    FunctionBody            go to state 35


State 29

   51 FunctionParameterList: FunctionParameter ',' FunctionParameterList .

    $default  reduce using rule 51 (FunctionParameterList)


State 30

   58 FunctionDefinition: ReturnType ID '(' FunctionParameterList ')' '{' . FunctionBody '}'

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3

    $default  reduce using rule 53 (VariableDefinitionList)

    Type                    go to state 32
    VariableDefinition      go to state 33
    VariableDefinitionList  go to state 34
    FunctionBody            go to state 36


State 31

   46 MainFunction: MAIN '(' VOID ')' '{' . FunctionBody '}'

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3

    $default  reduce using rule 53 (VariableDefinitionList)

    Type                    go to state 32
    VariableDefinition      go to state 33
    VariableDefinitionList  go to state 34
    FunctionBody            go to state 37


State 32

   52 VariableDefinition: Type . ID '=' CONSTANT ';'

    ID  shift, and go to state 38


State 33

   54 VariableDefinitionList: VariableDefinition . VariableDefinitionList

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3

    $default  reduce using rule 53 (VariableDefinitionList)

    Type                    go to state 32
    VariableDefinition      go to state 33
    VariableDefinitionList  go to state 39


State 34

   57 FunctionBody: VariableDefinitionList . FunctionStatementList

    RETURN  shift, and go to state 40
    WHILE   shift, and go to state 41
    IF      shift, and go to state 42
    ID      shift, and go to state 43
    ';'     shift, and go to state 44
    '{'     shift, and go to state 45

    AssignmentStatment     go to state 46
    IfStatement            go to state 47
    WhileStatement         go to state 48
    ReturnStatement        go to state 49
    BlockStatement         go to state 50
    EmptyStatement         go to state 51
    Statement              go to state 52
    FunctionStatementList  go to state 53


State 35

   59 FunctionDefinition: ReturnType ID '(' VOID ')' '{' FunctionBody . '}'

    '}'  shift, and go to state 54


State 36

   58 FunctionDefinition: ReturnType ID '(' FunctionParameterList ')' '{' FunctionBody . '}'

    '}'  shift, and go to state 55


State 37

   46 MainFunction: MAIN '(' VOID ')' '{' FunctionBody . '}'

    '}'  shift, and go to state 56


State 38

   52 VariableDefinition: Type ID . '=' CONSTANT ';'

    '='  shift, and go to state 57


State 39

   54 VariableDefinitionList: VariableDefinition VariableDefinitionList .

    $default  reduce using rule 54 (VariableDefinitionList)


State 40

   34 ReturnStatement: RETURN . ';'
   35                | RETURN . Expression ';'

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62
    ';'       shift, and go to state 63

    PrimaryExpression         go to state 64
    FunctionCall              go to state 65
    UnaryExpression           go to state 66
    MultiplicativeExpression  go to state 67
    AdditiveExpression        go to state 68
    ComparisonExpression      go to state 69
    Expression                go to state 70


State 41

   33 WhileStatement: WHILE . '(' Expression ')' Statement

    '('  shift, and go to state 71


State 42

   31 IfStatement: IF . '(' Expression ')' Statement
   32            | IF . '(' Expression ')' Statement ELSE Statement

    '('  shift, and go to state 72


State 43

   30 AssignmentStatment: ID . '=' Expression ';'

    '='  shift, and go to state 73


State 44

   39 EmptyStatement: ';' .

    $default  reduce using rule 39 (EmptyStatement)


State 45

   38 BlockStatement: '{' . StatementList '}'

    RETURN  shift, and go to state 40
    WHILE   shift, and go to state 41
    IF      shift, and go to state 42
    ID      shift, and go to state 43
    ';'     shift, and go to state 44
    '{'     shift, and go to state 45

    $default  reduce using rule 36 (StatementList)

    AssignmentStatment  go to state 46
    IfStatement         go to state 47
    WhileStatement      go to state 48
    ReturnStatement     go to state 74
    StatementList       go to state 75
    BlockStatement      go to state 50
    EmptyStatement      go to state 51
    Statement           go to state 76


State 46

   40 Statement: AssignmentStatment .

    $default  reduce using rule 40 (Statement)


State 47

   41 Statement: IfStatement .

    $default  reduce using rule 41 (Statement)


State 48

   42 Statement: WhileStatement .

    $default  reduce using rule 42 (Statement)


State 49

   43 Statement: ReturnStatement .
   55 FunctionStatementList: ReturnStatement .

    '}'       reduce using rule 55 (FunctionStatementList)
    $default  reduce using rule 43 (Statement)


State 50

   44 Statement: BlockStatement .

    $default  reduce using rule 44 (Statement)


State 51

   45 Statement: EmptyStatement .

    $default  reduce using rule 45 (Statement)


State 52

   56 FunctionStatementList: Statement . FunctionStatementList

    RETURN  shift, and go to state 40
    WHILE   shift, and go to state 41
    IF      shift, and go to state 42
    ID      shift, and go to state 43
    ';'     shift, and go to state 44
    '{'     shift, and go to state 45

    AssignmentStatment     go to state 46
    IfStatement            go to state 47
    WhileStatement         go to state 48
    ReturnStatement        go to state 49
    BlockStatement         go to state 50
    EmptyStatement         go to state 51
    Statement              go to state 52
    FunctionStatementList  go to state 77


State 53

   57 FunctionBody: VariableDefinitionList FunctionStatementList .

    $default  reduce using rule 57 (FunctionBody)


State 54

   59 FunctionDefinition: ReturnType ID '(' VOID ')' '{' FunctionBody '}' .

    $default  reduce using rule 59 (FunctionDefinition)


State 55

   58 FunctionDefinition: ReturnType ID '(' FunctionParameterList ')' '{' FunctionBody '}' .

    $default  reduce using rule 58 (FunctionDefinition)


State 56

   46 MainFunction: MAIN '(' VOID ')' '{' FunctionBody '}' .

    $default  reduce using rule 46 (MainFunction)


State 57

   52 VariableDefinition: Type ID '=' . CONSTANT ';'

    CONSTANT  shift, and go to state 78


State 58

    4 PrimaryExpression: CONSTANT .

    $default  reduce using rule 4 (PrimaryExpression)


State 59

    5 PrimaryExpression: ID .
   11 FunctionCall: ID . '(' FunctionArgList ')'
   12             | ID . '(' ')'

    '('  shift, and go to state 79

    $default  reduce using rule 5 (PrimaryExpression)


State 60

    7 PrimaryExpression: '(' . Expression ')'

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression         go to state 64
    FunctionCall              go to state 65
    UnaryExpression           go to state 66
    MultiplicativeExpression  go to state 67
    AdditiveExpression        go to state 68
    ComparisonExpression      go to state 69
    Expression                go to state 80


State 61

   14 UnaryExpression: '+' . UnaryExpression

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression  go to state 64
    FunctionCall       go to state 65
    UnaryExpression    go to state 81


State 62

   15 UnaryExpression: '-' . UnaryExpression

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression  go to state 64
    FunctionCall       go to state 65
    UnaryExpression    go to state 82


State 63

   34 ReturnStatement: RETURN ';' .

    $default  reduce using rule 34 (ReturnStatement)


State 64

   13 UnaryExpression: PrimaryExpression .

    $default  reduce using rule 13 (UnaryExpression)


State 65

    6 PrimaryExpression: FunctionCall .

    $default  reduce using rule 6 (PrimaryExpression)


State 66

   16 MultiplicativeExpression: UnaryExpression .

    $default  reduce using rule 16 (MultiplicativeExpression)


State 67

   17 MultiplicativeExpression: MultiplicativeExpression . '*' UnaryExpression
   18                         | MultiplicativeExpression . '/' UnaryExpression
   19 AdditiveExpression: MultiplicativeExpression .

    '*'  shift, and go to state 83
    '/'  shift, and go to state 84

    $default  reduce using rule 19 (AdditiveExpression)


State 68

   20 AdditiveExpression: AdditiveExpression . '+' AdditiveExpression
   21                   | AdditiveExpression . '-' AdditiveExpression
   22 ComparisonExpression: AdditiveExpression .
   23                     | AdditiveExpression . LT AdditiveExpression
   24                     | AdditiveExpression . LE AdditiveExpression
   25                     | AdditiveExpression . GT AdditiveExpression
   26                     | AdditiveExpression . GE AdditiveExpression

    LE   shift, and go to state 85
    GE   shift, and go to state 86
    LT   shift, and go to state 87
    GT   shift, and go to state 88
    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    $default  reduce using rule 22 (ComparisonExpression)


State 69

   27 Expression: ComparisonExpression .
   28           | ComparisonExpression . EQ ComparisonExpression
   29           | ComparisonExpression . NE ComparisonExpression

    EQ  shift, and go to state 91
    NE  shift, and go to state 92

    $default  reduce using rule 27 (Expression)


State 70

   35 ReturnStatement: RETURN Expression . ';'

    ';'  shift, and go to state 93


State 71

   33 WhileStatement: WHILE '(' . Expression ')' Statement

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression         go to state 64
    FunctionCall              go to state 65
    UnaryExpression           go to state 66
    MultiplicativeExpression  go to state 67
    AdditiveExpression        go to state 68
    ComparisonExpression      go to state 69
    Expression                go to state 94


State 72

   31 IfStatement: IF '(' . Expression ')' Statement
   32            | IF '(' . Expression ')' Statement ELSE Statement

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression         go to state 64
    FunctionCall              go to state 65
    UnaryExpression           go to state 66
    MultiplicativeExpression  go to state 67
    AdditiveExpression        go to state 68
    ComparisonExpression      go to state 69
    Expression                go to state 95


State 73

   30 AssignmentStatment: ID '=' . Expression ';'

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression         go to state 64
    FunctionCall              go to state 65
    UnaryExpression           go to state 66
    MultiplicativeExpression  go to state 67
    AdditiveExpression        go to state 68
    ComparisonExpression      go to state 69
    Expression                go to state 96


State 74

   43 Statement: ReturnStatement .

    $default  reduce using rule 43 (Statement)


State 75

   38 BlockStatement: '{' StatementList . '}'

    '}'  shift, and go to state 97


State 76

   37 StatementList: Statement . StatementList

    RETURN  shift, and go to state 40
    WHILE   shift, and go to state 41
    IF      shift, and go to state 42
    ID      shift, and go to state 43
    ';'     shift, and go to state 44
    '{'     shift, and go to state 45

    $default  reduce using rule 36 (StatementList)

    AssignmentStatment  go to state 46
    IfStatement         go to state 47
    WhileStatement      go to state 48
    ReturnStatement     go to state 74
    StatementList       go to state 98
    BlockStatement      go to state 50
    EmptyStatement      go to state 51
    Statement           go to state 76


State 77

   56 FunctionStatementList: Statement FunctionStatementList .

    $default  reduce using rule 56 (FunctionStatementList)


State 78

   52 VariableDefinition: Type ID '=' CONSTANT . ';'

    ';'  shift, and go to state 99


State 79

   11 FunctionCall: ID '(' . FunctionArgList ')'
   12             | ID '(' . ')'

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    ')'       shift, and go to state 100
    '&'       shift, and go to state 101
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression         go to state 64
    FunctionArgList           go to state 102
    FunctionCall              go to state 65
    UnaryExpression           go to state 66
    MultiplicativeExpression  go to state 67
    AdditiveExpression        go to state 68
    ComparisonExpression      go to state 69
    Expression                go to state 103


State 80

    7 PrimaryExpression: '(' Expression . ')'

    ')'  shift, and go to state 104


State 81

   14 UnaryExpression: '+' UnaryExpression .

    $default  reduce using rule 14 (UnaryExpression)


State 82

   15 UnaryExpression: '-' UnaryExpression .

    $default  reduce using rule 15 (UnaryExpression)


State 83

   17 MultiplicativeExpression: MultiplicativeExpression '*' . UnaryExpression

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression  go to state 64
    FunctionCall       go to state 65
    UnaryExpression    go to state 105


State 84

   18 MultiplicativeExpression: MultiplicativeExpression '/' . UnaryExpression

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression  go to state 64
    FunctionCall       go to state 65
    UnaryExpression    go to state 106


State 85

   24 ComparisonExpression: AdditiveExpression LE . AdditiveExpression

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression         go to state 64
    FunctionCall              go to state 65
    UnaryExpression           go to state 66
    MultiplicativeExpression  go to state 67
    AdditiveExpression        go to state 107


State 86

   26 ComparisonExpression: AdditiveExpression GE . AdditiveExpression

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression         go to state 64
    FunctionCall              go to state 65
    UnaryExpression           go to state 66
    MultiplicativeExpression  go to state 67
    AdditiveExpression        go to state 108


State 87

   23 ComparisonExpression: AdditiveExpression LT . AdditiveExpression

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression         go to state 64
    FunctionCall              go to state 65
    UnaryExpression           go to state 66
    MultiplicativeExpression  go to state 67
    AdditiveExpression        go to state 109


State 88

   25 ComparisonExpression: AdditiveExpression GT . AdditiveExpression

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression         go to state 64
    FunctionCall              go to state 65
    UnaryExpression           go to state 66
    MultiplicativeExpression  go to state 67
    AdditiveExpression        go to state 110


State 89

   20 AdditiveExpression: AdditiveExpression '+' . AdditiveExpression

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression         go to state 64
    FunctionCall              go to state 65
    UnaryExpression           go to state 66
    MultiplicativeExpression  go to state 67
    AdditiveExpression        go to state 111


State 90

   21 AdditiveExpression: AdditiveExpression '-' . AdditiveExpression

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression         go to state 64
    FunctionCall              go to state 65
    UnaryExpression           go to state 66
    MultiplicativeExpression  go to state 67
    AdditiveExpression        go to state 112


State 91

   28 Expression: ComparisonExpression EQ . ComparisonExpression

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression         go to state 64
    FunctionCall              go to state 65
    UnaryExpression           go to state 66
    MultiplicativeExpression  go to state 67
    AdditiveExpression        go to state 68
    ComparisonExpression      go to state 113


State 92

   29 Expression: ComparisonExpression NE . ComparisonExpression

    CONSTANT  shift, and go to state 58
    ID        shift, and go to state 59
    '('       shift, and go to state 60
    '+'       shift, and go to state 61
    '-'       shift, and go to state 62

    PrimaryExpression         go to state 64
    FunctionCall              go to state 65
    UnaryExpression           go to state 66
    MultiplicativeExpression  go to state 67
    AdditiveExpression        go to state 68
    ComparisonExpression      go to state 114


State 93

   35 ReturnStatement: RETURN Expression ';' .

    $default  reduce using rule 35 (ReturnStatement)


State 94

   33 WhileStatement: WHILE '(' Expression . ')' Statement

    ')'  shift, and go to state 115


State 95

   31 IfStatement: IF '(' Expression . ')' Statement
   32            | IF '(' Expression . ')' Statement ELSE Statement

    ')'  shift, and go to state 116


State 96

   30 AssignmentStatment: ID '=' Expression . ';'

    ';'  shift, and go to state 117


State 97

   38 BlockStatement: '{' StatementList '}' .

    $default  reduce using rule 38 (BlockStatement)


State 98

   37 StatementList: Statement StatementList .

    $default  reduce using rule 37 (StatementList)


State 99

   52 VariableDefinition: Type ID '=' CONSTANT ';' .

    $default  reduce using rule 52 (VariableDefinition)


State 100

   12 FunctionCall: ID '(' ')' .

    $default  reduce using rule 12 (FunctionCall)


State 101

    8 FunctionArgList: '&' . ID

    ID  shift, and go to state 118


State 102

   11 FunctionCall: ID '(' FunctionArgList . ')'

    ')'  shift, and go to state 119


State 103

    9 FunctionArgList: Expression .
   10                | Expression . ',' FunctionArgList

    ','  shift, and go to state 120

    $default  reduce using rule 9 (FunctionArgList)


State 104

    7 PrimaryExpression: '(' Expression ')' .

    $default  reduce using rule 7 (PrimaryExpression)


State 105

   17 MultiplicativeExpression: MultiplicativeExpression '*' UnaryExpression .

    $default  reduce using rule 17 (MultiplicativeExpression)


State 106

   18 MultiplicativeExpression: MultiplicativeExpression '/' UnaryExpression .

    $default  reduce using rule 18 (MultiplicativeExpression)


State 107

   20 AdditiveExpression: AdditiveExpression . '+' AdditiveExpression
   21                   | AdditiveExpression . '-' AdditiveExpression
   24 ComparisonExpression: AdditiveExpression LE AdditiveExpression .

    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    $default  reduce using rule 24 (ComparisonExpression)


State 108

   20 AdditiveExpression: AdditiveExpression . '+' AdditiveExpression
   21                   | AdditiveExpression . '-' AdditiveExpression
   26 ComparisonExpression: AdditiveExpression GE AdditiveExpression .

    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    $default  reduce using rule 26 (ComparisonExpression)


State 109

   20 AdditiveExpression: AdditiveExpression . '+' AdditiveExpression
   21                   | AdditiveExpression . '-' AdditiveExpression
   23 ComparisonExpression: AdditiveExpression LT AdditiveExpression .

    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    $default  reduce using rule 23 (ComparisonExpression)


State 110

   20 AdditiveExpression: AdditiveExpression . '+' AdditiveExpression
   21                   | AdditiveExpression . '-' AdditiveExpression
   25 ComparisonExpression: AdditiveExpression GT AdditiveExpression .

    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    $default  reduce using rule 25 (ComparisonExpression)


State 111

   20 AdditiveExpression: AdditiveExpression . '+' AdditiveExpression
   20                   | AdditiveExpression '+' AdditiveExpression .
   21                   | AdditiveExpression . '-' AdditiveExpression

    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    '+'       [reduce using rule 20 (AdditiveExpression)]
    '-'       [reduce using rule 20 (AdditiveExpression)]
    $default  reduce using rule 20 (AdditiveExpression)


State 112

   20 AdditiveExpression: AdditiveExpression . '+' AdditiveExpression
   21                   | AdditiveExpression . '-' AdditiveExpression
   21                   | AdditiveExpression '-' AdditiveExpression .

    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    '+'       [reduce using rule 21 (AdditiveExpression)]
    '-'       [reduce using rule 21 (AdditiveExpression)]
    $default  reduce using rule 21 (AdditiveExpression)


State 113

   28 Expression: ComparisonExpression EQ ComparisonExpression .

    $default  reduce using rule 28 (Expression)


State 114

   29 Expression: ComparisonExpression NE ComparisonExpression .

    $default  reduce using rule 29 (Expression)


State 115

   33 WhileStatement: WHILE '(' Expression ')' . Statement

    RETURN  shift, and go to state 40
    WHILE   shift, and go to state 41
    IF      shift, and go to state 42
    ID      shift, and go to state 43
    ';'     shift, and go to state 44
    '{'     shift, and go to state 45

    AssignmentStatment  go to state 46
    IfStatement         go to state 47
    WhileStatement      go to state 48
    ReturnStatement     go to state 74
    BlockStatement      go to state 50
    EmptyStatement      go to state 51
    Statement           go to state 121


State 116

   31 IfStatement: IF '(' Expression ')' . Statement
   32            | IF '(' Expression ')' . Statement ELSE Statement

    RETURN  shift, and go to state 40
    WHILE   shift, and go to state 41
    IF      shift, and go to state 42
    ID      shift, and go to state 43
    ';'     shift, and go to state 44
    '{'     shift, and go to state 45

    AssignmentStatment  go to state 46
    IfStatement         go to state 47
    WhileStatement      go to state 48
    ReturnStatement     go to state 74
    BlockStatement      go to state 50
    EmptyStatement      go to state 51
    Statement           go to state 122


State 117

   30 AssignmentStatment: ID '=' Expression ';' .

    $default  reduce using rule 30 (AssignmentStatment)


State 118

    8 FunctionArgList: '&' ID .

    $default  reduce using rule 8 (FunctionArgList)


State 119

   11 FunctionCall: ID '(' FunctionArgList ')' .

    $default  reduce using rule 11 (FunctionCall)


State 120

   10 FunctionArgList: Expression ',' . FunctionArgList
